infra/envs/local/kube-core/gateway-api/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
spec:
  gatewayClassName: nginx
  listeners:
#    - protocol: HTTP
#      port: 80
#      name: gateway-http
#      allowedRoutes:
#        namespaces:
#          from: All
    - protocol: HTTPS
      port: 443
      name: gateway-https
      hostname: "*.k8s.local"
      tls:
        mode: Terminate
        certificateRefs:
          - name: self-signed-cert
      allowedRoutes:
        namespaces:
          from: All
